fix text wrapping issue

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -105,6 +105,18 @@
     font-size: 1rem;
 }
 
+.sim-data {
+    width: 98%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+.sim-data pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
 .buttons {
     color: white;
     background-color: #008CBA;
@@ -115,7 +127,7 @@
     margin-bottom: 3px;
 }
 
-.footer{
+.footer {
     text-align: center;
     padding: 1% 0 1% 0;
 }
@@ -123,8 +135,8 @@
 .footer a {
     color: #007bff;
     text-decoration: none;
-  }
-  
-  .footer a:hover {
+}
+
+.footer a:hover {
     text-decoration: underline;
-  }
+}
